# flashcards

./: .classpath  .gitignore  .project  CHANGELOG.md  CODE-OF-CONDUCT.md  README.md  build.gradle  conversion.md  dependency-reduced-pom.xml  pom.xml  pyproject.toml  settings.gradle
design/: qt.md
shell/: flashcards  testshell
src/com/philhanna/flashcards/: ApplicationException.java  Card.java  Configuration.java  Session.java
src/flashcards/: __main__.py
src/flashcards/adapter/: __init__.py
src/flashcards/adapter/driven/: __init__.py
src/flashcards/adapter/driving/: __init__.py
src/flashcards/adapter/in_/: __init__.py
src/flashcards/domain/: __init__.py  card.py  card_history.py  card_statistics.py  deck.py  exceptions.py
src/flashcards/domain/session/: __init__.py  deck_session.py  session.py  session_card.py  session_cursor.py  tracked_card.py
src/flashcards/port/: __init__.py  deck_loader.py  study_session_use_case.py
src/flashcards/usecase/: __init__.py  study_session.py
src/main/resources/: sample.properties
src/test/resources/: Jane_Austen.xml  Norse_Mythology.db
testdata/: Best_Picture_Awards.flc  Jane_Austen.flc  NBA.flc  NBA.xml  Norse_Mythology.flc  Norse_Mythology.xml  Shakespeare.flc
tests/: test_smoke.py
tests/adapter/: __init__.py  test_sqlite_deck_loader.py
tests/domain/: test_basic_card.py  test_deck_session.py  test_tracked_card.py
tests/resources/: Best_Picture_Awards.db  Jane_Austen.db  NBA.db  Shakespeare.db
tests/usecase/: __init__.py  test_study_session.py
tools/: xml_to_sqlite.py
(+183 files in other folders)
