[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flashcards"
version = "2.1.1"
requires-python = ">=3.11"
dependencies = [
    "PyQt6",
]

[project.scripts]
flashcards = "flashcards.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
